// scan-service/src/main/java/com/portal/scan/entity/Vulnerability.java
package com.portal.scan.entity;

import jakarta.persistence.*;
import java.time.LocalDateTime;

@Entity
@Table(name = "vulnerabilities")
public class Vulnerability {
    
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "scan_id", nullable = false)
    private Scan scan;
    
    @Column(name = "sonarqube_rule_id")
    private String sonarqubeRuleId;
    
    @Column(name = "vulnerability_type")
    private String vulnerabilityType;
    
    @Column(name = "severity", length = 20)
    private String severity = "MAJOR";
    
    @Column(name = "file_path")
    private String filePath;
    
    @Column(name = "line_number")
    private Integer lineNumber;
    
    @Column(name = "message", columnDefinition = "TEXT")
    private String message;
    
    @Column(name = "status", length = 20)
    private String status = "OPEN";
    
    @Column(name = "created_at")
    private LocalDateTime createdAt;
    
    @OneToOne(mappedBy = "vulnerability", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
    private AiSuggestion aiSuggestion;
    
    public Vulnerability() {
        this.createdAt = LocalDateTime.now();
    }
    
    public Vulnerability(Scan scan, String ruleId, String type, String severity,
                         String filePath, Integer lineNumber, String message) {
        this.scan = scan;
        this.sonarqubeRuleId = ruleId;
        this.vulnerabilityType = type;
        this.severity = severity;
        this.filePath = filePath;
        this.lineNumber = lineNumber;
        this.message = message;
        this.status = "OPEN";
        this.createdAt = LocalDateTime.now();
    }
    
    // Getters and Setters
    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }
    
    public Scan getScan() { return scan; }
    public void setScan(Scan scan) { this.scan = scan; }
    
    public String getSonarqubeRuleId() { return sonarqubeRuleId; }
    public void setSonarqubeRuleId(String sonarqubeRuleId) { this.sonarqubeRuleId = sonarqubeRuleId; }
    
    public String getVulnerabilityType() { return vulnerabilityType; }
    public void setVulnerabilityType(String vulnerabilityType) { this.vulnerabilityType = vulnerabilityType; }
    
    public String getSeverity() { return severity; }
    public void setSeverity(String severity) { this.severity = severity; }
    
    public String getFilePath() { return filePath; }
    public void setFilePath(String filePath) { this.filePath = filePath; }
    
    public Integer getLineNumber() { return lineNumber; }
    public void setLineNumber(Integer lineNumber) { this.lineNumber = lineNumber; }
    
    public String getMessage() { return message; }
    public void setMessage(String message) { this.message = message; }
    
    public String getStatus() { return status; }
    public void setStatus(String status) { this.status = status; }
    
    public LocalDateTime getCreatedAt() { return createdAt; }
    public void setCreatedAt(LocalDateTime createdAt) { this.createdAt = createdAt; }
    
    public AiSuggestion getAiSuggestion() { return aiSuggestion; }
    public void setAiSuggestion(AiSuggestion aiSuggestion) { this.aiSuggestion = aiSuggestion; }
}