%%{init: {'theme': 'dark', 'themeVariables': {'lineColor': '#000000', 'edgeLabelBackground': '#ffffff'}}}%%
erDiagram

    %% ── Login Service DB ──────────────────────────────
    users {
        BIGINT      id              PK
        VARCHAR(50) username        UK
        VARCHAR(100) email          UK
        VARCHAR(255) password_hash
        BIGINT      github_id
        VARCHAR(255) github_access_token
        VARCHAR(20) role            "ADMIN | DEVELOPER"
        TIMESTAMP   created_at
        TIMESTAMP   updated_at
    }

    sessions {
        BIGINT    id          PK
        BIGINT    user_id     FK
        TEXT      jwt_token
        TIMESTAMP expires_at
        TIMESTAMP created_at
    }

    %% ── Project Service DB ────────────────────────────
    projects {
        BIGINT      id          PK
        VARCHAR(100) name
        TEXT        description
        BIGINT      owner_id    "FK → users.id (cross-service)"
        TIMESTAMP   created_at
        TIMESTAMP   updated_at
    }

    repositories {
        BIGINT      id              PK
        BIGINT      project_id      FK
        BIGINT      github_repo_id
        VARCHAR(100) repo_name
        VARCHAR(200) repo_full_name
        VARCHAR(500) repo_url
        VARCHAR(500) clone_url
        VARCHAR(50) default_branch
        BOOLEAN     is_active
        TIMESTAMP   last_scan_at
        TIMESTAMP   created_at
    }

    %% ── Scan Service DB ───────────────────────────────
    scans {
        BIGINT      id                  PK
        BIGINT      project_id          "FK → projects.id (cross-service)"
        BIGINT      repository_id       "FK → repositories.id (cross-service)"
        VARCHAR(500) repository_url
        VARCHAR(50) branch
        VARCHAR(20) scan_status         "PENDING | SCANNING | COMPLETED | FAILED"
        VARCHAR(200) sonarqube_project_key
        TIMESTAMP   started_at
        TIMESTAMP   completed_at
        TEXT        error_message
        TIMESTAMP   created_at
    }

    vulnerabilities {
        BIGINT      id                  PK
        BIGINT      scan_id             FK
        VARCHAR(100) sonarqube_rule_id
        VARCHAR(50) vulnerability_type
        VARCHAR(20) severity            "BLOCKER | CRITICAL | MAJOR | MINOR | INFO"
        VARCHAR(500) file_path
        INT         line_number
        TEXT        message
        VARCHAR(20) status              "OPEN | IN_PROGRESS | RESOLVED | FALSE_POSITIVE"
        TIMESTAMP   created_at
    }

    ai_suggestions {
        BIGINT      id              PK
        BIGINT      vulnerability_id FK
        TEXT        suggestion_text
        TEXT        code_example
        DOUBLE      confidence_score "0.0 – 1.0"
        VARCHAR(50) model_used
        TIMESTAMP   generated_at
    }

    scan_summary {
        BIGINT  id                  PK
        BIGINT  scan_id             FK
        INT     total_vulnerabilities
        INT     blocker_count
        INT     critical_count
        INT     major_count
        INT     minor_count
        INT     info_count
        JSON    summary_json
        TIMESTAMP created_at
    }

    %% ── Relationships ─────────────────────────────────
    users           ||--o{ sessions          : "has"
    users           ||--o{ projects          : "owns (cross-service ref)"
    projects        ||--o{ repositories      : "contains"
    repositories    ||--o{ scans             : "triggers"
    scans           ||--o{ vulnerabilities   : "produces"
    scans           ||--||  scan_summary     : "summarised by"
    vulnerabilities ||--o|  ai_suggestions   : "has suggestion"
